--- a/hackatonbari/package.json
+++ b/hackatonbari/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hackquiz",
+  "name": "hackatonbari",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,9 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.15.17",
+    "axios": "^1.6.8",
+    "firebase": "^10.12.0",
+    "html-react-parser": "^5.1.10",
+    "js-confetti": "^0.12.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.23.1"
+    "react-moment": "^1.1.3",
+    "react-router-dom": "^6.23.1",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
