--- a/hackatonbari/package.json
+++ b/hackatonbari/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.15.17",
     "axios": "^1.6.8",
     "firebase": "^10.12.0",
+    "gsap": "^3.12.5",
     "html-react-parser": "^5.1.10",
     "js-confetti": "^0.12.0",
     "react": "^18.2.0",
